fixed app  width on mobile screens

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,21 +13,19 @@ html {
 }
 
 body {
-	display: grid;
-	place-items: center;
-	align-items: flex-start;
 	min-height: 100vh;
+	width: 100%;
 	font-family: 'Hanken Grotesk', sans-serif;
 	font-size: 1.6rem;
 	background-color: $white;
 }
 
 .app {
-	background-color: $white;
 	margin: 0 auto;
-	width: 100%;
 	min-width: 275px;
-	max-width: 500px;
+	width: 100%;
+	max-width: 576px;
+	background-color: $white;
 
 	&__result {
 		display: grid;
@@ -175,6 +173,8 @@ body {
 
 @media (min-width: 768px) {
 	body {
+		display: flex;
+		justify-content: center;
 		align-items: center;
 	}
 
